# bean-ai

./: PROJECT_SPEC.md  README.md  pyproject.toml
docs/adr/: 2026-03-02-http-wrapper.md
src/bean_ai/: __init__.py  cli.py  model.py  predict.py  preprocess.py  serve.py  train.py  util.py
