[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bean-ai"
version = "0.1.0"
description = "AI-powered account prediction for beancount"
requires-python = ">=3.10"
dependencies = [
    "beancount",
    "bottle",
    "datasets",
    "keras",
    "keras_preprocessing",
    "numpy",
    "pandas",
    "tensorflow",
]

[project.scripts]
bean-ai = "bean_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
